# cget-recipes

./: CMakeLists.txt  README.md  test-all
cmake/: cget-recipe-utils-config.cmake
cmake/cget-recipe-utils/: cget-recipe-utils-config.cmake
cubeb/: package.txt
kinetiknz/cubeb/: build.cmake
linmath.h/: package.txt
recipes/allegro/: build.cmake  package.txt  requirements.txt
recipes/armadillo/: package.txt  requirements.txt
recipes/arrayfire/: build.cmake  package.txt  requirements.txt
recipes/assimp/: package.txt
recipes/boost/: build.cmake  package.txt  requirements.txt
recipes/bzip2/: build.cmake  package.txt
recipes/c-ares/: build.cmake  package.txt
recipes/chaiscript/: package.txt
recipes/chaospp/: package.txt
recipes/copperspice/: package.txt  requirements.txt
recipes/cpp-netlib/: package.txt  requirements.txt
recipes/cppcms/: build.cmake  package.txt  requirements.txt
recipes/cppmicroservices/: package.txt
recipes/cuberite/: package.txt
recipes/curl/: build.cmake  package.txt  requirements.txt
recipes/digitalinblue/: celero
recipes/eigen/: package.txt
recipes/expat/: package.txt
recipes/fftw/: build.cmake  package.txt
recipes/fltk/: package.txt  requirements.txt
recipes/freeimage/: build.cmake  package.txt  requirements.txt
recipes/freetype/: package.txt  requirements.txt
recipes/gflags/: package.txt
recipes/glfw/: package.txt
recipes/h2o/: package.txt
recipes/hdf5/: package.txt
test/: init-mingw.sh  init-shared.sh  init-static.sh  mingw.toolchain  remove.sh  run-pkg.sh  run-variant.sh  run.sh
(+462 files in other folders)
